k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: postgres }
spec:
  selector: { matchLabels: { app: postgres } }
  replicas: 1
  template:
    metadata: { labels: { app: postgres } }
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: db
        image: gaarge/db:4.8
        ports: [ { containerPort: 5432 } ]
        volumeMounts:
          - { name: data,     mountPath: /var/lib/postgresql/data }
          - { name: init-sql, mountPath: /docker-entrypoint-initdb.d }
        lifecycle:
          postStart:
            exec:
               command: ["sh","-lc","set -e; echo '[postStart] waiting for Postgres...'; for i in $(seq 1 60); do pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\" -h 127.0.0.1 && break; sleep 2; done; pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\" -h 127.0.0.1; echo \"[postStart] checking $EXCEL_PATH\"; [ -f \"$EXCEL_PATH\" ]; export DATABASE_URL=\"postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@127.0.0.1:5432/${POSTGRES_DB}\"; echo '[postStart] importing...'; /opt/venv/bin/python / [...]
               
               
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: pgdata }
        - name: init-sql
          configMap: { name: pg-init-sql }
---
apiVersion: v1
kind: Service
metadata: { name: postgres }
spec:
  selector: { app: postgres }
  ports: [ { port: 5432, targetPort: 5432 } ]
